Fix responsive images download for header and CTA background
Desktop background images were:
- always being downloaded twice on desktop -> the second time just using the default fallback size without respecting responsive queries.
- being downloaded also on mobile where they are not needed and generally too large

--- a/scss/modules/paragraphs.scss
+++ b/scss/modules/paragraphs.scss
@@ -79,7 +79,18 @@
 
   .field--name-field-bg-image {
     img {
-      display: none;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      position: absolute;
+      right: 0;
+      width: 100%;
+      z-index: 0;
+      top: 0;
+    }
+
+    .contextual-region {
+      position: unset;
     }
   }
 
@@ -471,7 +482,18 @@
 
   .field--name-field-bg-image {
     img {
-      display: none;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      position: absolute;
+      right: 0;
+      width: 100%;
+      z-index: 0;
+      top: 0;
+    }
+
+    .contextual-region {
+      position: unset;
     }
   }
 
